# elizur

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  TODO.md  pyproject.toml  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/actions/: setup.yml
.github/actions/setup/: action.yml
.github/workflows/: lint-and-test.yml  lint_and_test.yml  publish-pypi.yml
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/life/: annuity.doctree  index.doctree  table.doctree  util.doctree
docs/doctrees/life/annuity/: annuity.doctree
docs/doctrees/life/table/: table.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
docs/html/_sources/life/: annuity.rst.txt  index.rst.txt  table.rst.txt  util.rst.txt
docs/html/_static/: documentation_options.js
docs/html/life/: annuity.html  index.html  table.html  util.html
elizur/: __init__.py
elizur/life/: __init__.py  epv.py
elizur/life/annuity/: __init__.py  annuity.py
elizur/life/table/: __init__.py  table.py
elizur/life/util/: __init__.py  soa.py  validators.py
envs/: .env.numbajit
sphinx/: conf.py  make.bat
sphinx/life/: index.rst  util.rst
test/unit/annuity/: test_annuity_functions.py
test/unit/life/: test_epv.py  test_expected_present_value.py
test/unit/life/annuity/: test_annuity.py
test/unit/life/table/: test_life_table.py
test/unit/life/util/: mortality_table_1.csv  test_life_util_soa.py
