[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elizur"
authors = [
    {name = "Tanner Rollefson", email = "trollefson@gmail.com"},
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "makefun>=1.9.2",
  "numpy>=1.18",
]
dynamic = ["version"]
classifiers=[
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
]

[tool.setuptools]
packages = ["elizur"]

[tool.setuptools.dynamic]
version = {attr = "elizur.__init__.VERSION"}

[project.optional-dependencies]
dev = [
  "black",
  "coveralls",
  "mock",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "sphinx",
  "sphinx_rtd_theme",
]

[project.urls]
Repository = "https://github.com/trollefson/elizur"
